# SymbolicLogic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  logic.cpp  logic.h  main.cpp
tests/: CMakeLists.txt  Logic.test.cpp
